--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,18 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
+  <br>
   <h1>
     Welcome to {{ title }}!
   </h1>
+  <hr>
+  <br>
+  <br>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+          <app-todos></app-todos>
+      </div>
+    </div>
+  </div>
 </div>
-
