--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,4 +1,4 @@
-<div class="todo">
+<div *ngIf="todo" class="todo">
   <p>Title: {{todo.title}}</p>
   <p>Description: {{todo.description}}</p>
   <p>End date: {{todo.endDate | date}}</p>
