--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,6 +1,27 @@
 <div>
-  <h3>Todos:</h3>
-  <ul>
-    <li *ngFor="let todo of todos" (mouseenter)=selectTodo(todo) (mouseleave)=selectTodo(null)>{{todo.title}} </li>
-  </ul>
+  <table class="table table-hover">
+    <thead>
+      <th>#</th>
+      <th>Todo</th>
+      <th></th>
+    </thead>
+    <tbody>
+      <tr *ngFor="let todo of todos; let i = index" (mouseenter)=selectTodo(todo) (mouseleave)=selectTodo(null)
+        [ngClass]="{
+          'todo-not-started': (! todo.status || todo.status === 'not started'),
+          'todo-canceled': todo.status === 'canceled',
+          'todo-completed': todo.status === 'completed',
+          'todo-started': todo.status === 'started'
+        }">
+        <th>{{i + 1}}</th>
+        <td>{{todo.title}}</td>
+        <td><span class="fa" [ngClass]="{
+          'fa-pause': (! todo.status || todo.status === 'not started'),
+          'fa-ban': todo.status === 'canceled',
+          'fa-check': todo.status === 'completed',
+          'fa-repeat': todo.status === 'started'
+        }"></span></td>
+      </tr>
+    </tbody>
+  </table>
 </div>
