Replaced hardcoded todos with http call to Firestore. Also changed table format

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -5,6 +5,7 @@
   'todo-started': todo.status === 'started'
 }">
   <p>Title: {{todo.title}}</p>
+  <p>Status: {{todo.status}}</p>
   <p>Description: {{todo.description}}</p>
   <p>End date: {{todo.endDate | date}}</p>
 </div>
