--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -4,7 +4,7 @@
       <th>#</th>
       <th>Status</th>
       <th>Todo</th>
-      
+      <th>Actions</th>
     </thead>
     <tbody>
       <tr *ngFor="let todo of todos; let i = index" (mouseenter)=selectTodo(todo) (mouseleave)=selectTodo(null)
@@ -22,7 +22,11 @@
           'fa-repeat': todo.status === 'started'
         }"></span></td>
         <td>{{todo.title}}</td>
-        
+        <td>
+          <span>
+            <div class="fa fa-trash" (click)="deleteTodo(todo)"></div>
+          </span>
+        </td>
       </tr>
     </tbody>
   </table>
