--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
           <app-todos (todoSelected)="onTodoSelected($event)" [todoActionRequested]="todoActionEvent"></app-todos>
       </div>
       <div class="col-md-8">
-          <app-todo [todo]="selectedTodo"></app-todo>
+          <app-todo [todo]="selectedTodo" [todoActionRequested]="todoActionEvent"></app-todo>
       </div>
     </div>
   </div>
