Added form validation

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -8,13 +8,13 @@
       <div class="input-group-prepend">
         <span class="input-group-text" id="inputGroup-sizing-sm">Title</span>
       </div>
-      <input [disabled]="!editMode" type="text" class="form-control" [(ngModel)]="todo.title">
+      <input required [disabled]="!editMode" type="text" class="form-control" [(ngModel)]="todo.title" #title="ngModel">
   </div>
   <div class="input-group input-group-sm mb-3">
       <div class="input-group-prepend">
         <span class="input-group-text" id="inputGroup-sizing-sm">Status</span>
       </div>
-      <input [disabled]="true" type="text" class="form-control" [(ngModel)]="todo.status">
+      <input required [disabled]="true" type="text" class="form-control" [(ngModel)]="todo.status" #status="ngModel">
   </div>
   <div class="input-group input-group-sm mb-3">
       <div class="input-group-prepend">
@@ -26,10 +26,11 @@
       <div class="input-group-prepend">
         <span class="input-group-text" id="inputGroup-sizing-sm">End date</span>
       </div>
-      <input [disabled]="!editMode" type="date" class="form-control" [ngModel] ="todo.endDate | date:'yyyy-MM-dd'" (ngModelChange)="todo.endDate = $event">
+      <input required [disabled]="!editMode" type="date" class="form-control" [ngModel] ="todo.endDate | date:'yyyy-MM-dd'"
+       (ngModelChange)="todo.endDate = $event" #endDate="ngModel">
   </div>
   <div *ngIf="editMode">
-    <button class="btn btn-primary todo-button" (click)="save(todo)">Save</button>
+    <button [disabled]="title.invalid || status.invalid || endDate.invalid" class="btn btn-primary todo-button" (click)="save(todo)">Save</button>
     <button class="btn btn-danger todo-button" (click)="cancel()">Cancel</button>
   </div>
 </div>
