--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -24,7 +24,7 @@
         <td>{{todo.value.title}}</td>
         <td>
           <span>
-            <div class="fa fa-trash" (click)="deleteTodo(todo.prop)"></div>
+            <div class="fa fa-trash action-icon" (click)="deleteTodo(todo.prop)"></div>
           </span>
         </td>
       </tr>
