--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,11 @@
   <br>
   <div class="container">
     <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <app-status-banner></app-status-banner>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-md-4">
         <app-todo-action-buttons></app-todo-action-buttons>
       </div>
