--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -15,9 +15,8 @@
         <span class="input-group-text" id="inputGroup-sizing-sm">Status</span>
       </div>
       <select class="custom-select" required [disabled]="!isInputMode()" [(ngModel)]="todo.status" #status="ngModel">
-          <option *ngFor="let s of statuses" [ngValue]="s">{{s}}</option>
+          <option *ngFor="let s of STATUSES" [ngValue]="s">{{s}}</option>
         </select>
-      <!-- <input required [disabled]="!isInputMode()" type="text" class="form-control" [(ngModel)]="todo.status" #status="ngModel"> -->
   </div>
   <div class="input-group input-group-sm mb-3">
       <div class="input-group-prepend">
