--- a/src/app/todos-panel/todo-action-buttons/todo-action-buttons.component.html
+++ b/src/app/todos-panel/todo-action-buttons/todo-action-buttons.component.html
@@ -1,4 +1,9 @@
 <div class="input-group">
+        <button class="btn btn-primary todo-action-item" routerLink="/admin">
+                <span class="fa fa-cog"></span> Admin panel
+        </button>
+</div>
+<div class="input-group">
         <button class="btn btn-primary todo-action-item" (click)="addTodo()">
                 <span class="fa fa-plus"></span> Add
         </button>
