Moved status color handling to admin panel

--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -1,3 +1,15 @@
-<p>
-  Do admin stuff here!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+        <button class="btn btn-primary admin-action-button" routerLink="/todos">
+            <span class="fa fa-list-ol"></span> Todos Panel
+    </button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="cold-md-6">
+      <app-status-panel></app-status-panel>
+    </div>
+    <div class="cold-md-6"></div>
+  </div>
+</div>
