--- a/src/app/todos-panel/todos/todos.component.html
+++ b/src/app/todos-panel/todos/todos.component.html
@@ -8,12 +8,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let todo of todos | todoFilter:todoFilterValue; let i = index" (mouseenter)="selectTodo(todo.value)" (mouseleave)="selectTodo(null)"
-        [ngClass]="{
-          'todo-not-started': (! todo.value.status || todo.value.status === 'not started'),
-          'todo-canceled': todo.value.status === 'canceled',
-          'todo-completed': todo.value.status === 'completed',
-          'todo-started': todo.value.status === 'started'
-        }">
+        [ngStyle]="{'background-color' : getStatusColor(todo.value.status)}">
         <th>{{i + 1}}</th>
         <td class="status-icon"><span class="fa" [ngClass]="{
           'fa-pause': (! todo.value.status || todo.value.status === 'not started'),
