--- a/src/app/todos-panel/todo/todo.component.css
+++ b/src/app/todos-panel/todo/todo.component.css
@@ -1,23 +1,8 @@
 .todo {
     border: 2px solid;
+    border-color: dodgerblue;
     text-align: left;
     padding: 10px;
-}
-
-.todo-canceled {
-    border-color:lightcoral
-}
-
-.todo-not-started {
-    border-color: lightblue
-}
-
-.todo-started {
-    border-color: yellow
-}
-
-.todo-completed {
-    border-color: mediumseagreen
 }
 
 .todo-button {
