--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,17 @@
 <div style="text-align:center">
     <br>
-    <h1>
-      Welcome to {{ title }}!
-    </h1>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+          <h1>
+              Welcome to {{ title }}!
+          </h1>
+      </div>
+      <div class="col-md-2">
+          <app-logout></app-logout>
+      </div>
+    </div>
     <hr>
 </div>
+
 <router-outlet></router-outlet>
